# Line-Break-Project

./: .gitignore  pyproject.toml
configs/: base.yaml  debug.yaml
notebooks/: 01_data_sanity_checks.ipynb  02_preds_inspection.ipynb  03_embedding_inspection.ipynb  04_activation_inspections.ipynb  05_sae_features.ipynb
scripts/: download_results.sh  train_a100.sh  train_debug.sh
src/line_breaks_prediction_replication.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/project_main/: checkpoints.py  data.py  evaluate.py  metrics.py  model.py  tokens.py  train.py
tests/: test_checkpoints.py  test_data.py  test_model.py  test_tokens.py  test_train.py
