[project]
name = "line-breaks-prediction-replication"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformer-lens",
    "pyyaml",
    "numpy",
    "pandas",
    "matplotlib",
    "einops",
    "tqdm",
    "pytest",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"